css fix z-index

--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -5,6 +5,7 @@
     padding: 0 16px;
     margin-bottom: 16px;
     position: relative;
+    z-index: 20000;
 
     .container__logo {
         flex: 1;
